Dummy_Package_for_scratch_org/main/default/objects/Burndown_Item__c/Burndown_Item__c.object-meta.xml
<CustomObject>
    <label>Burndown Item</label>
    <nameField>
        <displayFormat>BI - {0000000}</displayFormat>
        <label>Burndown Item  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burndown Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>