Dummy_Package_for_scratch_org/main/default/objects/Burndown_Item__c/fields/Expected_Story_Point__c.field-meta.xml
<CustomField>
    <fullName>Expected_Story_Point__c</fullName>
    <label>Expected Story Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>