Dummy_Package_for_scratch_org/main/default/objects/Burndown_Item__c/fields/Total_Story_Point__c.field-meta.xml
<CustomField>
    <fullName>Total_Story_Point__c</fullName>
    <label>Total Story Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>