Dummy_Package_for_scratch_org/main/default/objects/Burndown_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sprint__c</columns>
    <columns>Date__c</columns>
    <columns>Expected_Story_Point__c</columns>
    <columns>Total_Story_Point__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>